docs/mongodb-ui/mongo-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-ui
  namespace: flowi
spec:
  selector:
    app: mongo-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
