docs/mongodb-ui/mongo-ui-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mongo-ui
  namespace: flowi
spec:
  hosts:
  - "mongo.flowi.cloud"
  gateways:
  - flowi-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: mongo-ui
